<?xml version="1.0" ?>
<package format="2">
  <name>multimaster_udp</name>
  <version>1.0.0</version>
  <description>
    Multimaster is a script allowing to register topics and services at a second master and to subscribe to topics and services from a second master.
  </description>
  <author email="daniel.claes@liverpool.ac.uk">Daniel Claes</author>
  <author email="alexis.paques@gmail.com">Alexis Paques</author>
  <maintainer email="alexis.paques@gmail.com">Alexis Paques</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosgraph</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>

